--- a/src/main/resources/templates/simularEmprestimo.html
+++ b/src/main/resources/templates/simularEmprestimo.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="usuarioApp">
+<html ng-app="emprestimoApp">
     <head>
         <!--/*/ <th:block th:include="fragments/headerinc :: head"></th:block> /*/-->
     </head>    
@@ -10,8 +10,8 @@
         <script type="text/javascript" th:src="@{/js/lib/angular-ui-router.min.js}"></script>
         <script type="text/javascript" th:src="@{/js/lib/localforage.min.js}"></script>
         <script type="text/javascript" th:src="@{/js/lib/ngStorage.min.js}"></script>
-        <script type="text/javascript" th:src="@{/js/app/UsuarioApp.js}"></script>
-        <script type="text/javascript" th:src="@{/js/app/UsuarioService.js}"></script>
-        <script type="text/javascript" th:src="@{/js/app/UsuarioController.js}"></script>
+        <script type="text/javascript" th:src="@{/js/app/EmprestimoApp.js}"></script>
+        <script type="text/javascript" th:src="@{/js/app/EmprestimoService.js}"></script>
+        <script type="text/javascript" th:src="@{/js/app/EmprestimoController.js}"></script>
     </body>
 </html>
