--- a/src/main/resources/templates/cadastro.html
+++ b/src/main/resources/templates/cadastro.html
@@ -3,10 +3,10 @@
       xmlns:th="http://www.thymeleaf.org">
     <head lang="en">
         <!--/*/ <th:block th:include="fragments/headerinc :: head"></th:block> /*/-->
-    </head>    
-    <body>
+    </head>
+    <body class="layout-scroll-block">
         <div class="bg-login">
-            <div class="container-login">
+            <div class="container-cadastro">
                 <div class="panel panel-default">
                     <div class="panel-body box-login">
                         <h3 class="title-login">Cadastro</h3>
@@ -28,9 +28,11 @@
                                 <p th:if="${#fields.hasErrors('passwordCheck')}" th:errors="*{passwordCheck}" th:errorclass="invalid-feedback">Password Match Error</p>
                             </div>
                             <div class="form-group">
-                                <a class="btn btn-default" href="/"><i class="fa fa-arrow-left"></i> Voltar</a>
+                                <button type="button" class="btn btn-default" onclick="location.href='/'">
+                                    <i class="fa fa-arrow-left"></i> Voltar
+                                </button>
                                 <button type="submit" class="btn btn-login"/>
-                                <i class="fa fa-hdd-o"></i> Salvar
+                                    <i class="fa fa-hdd-o"></i> Salvar
                                 </button>
                             </div>	
                         </form>
