--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -5,21 +5,45 @@
     </head>
     <body>
         <div th:fragment="header">
-            <nav class="navbar navbar-default">
-                <div class="container-fluid">
-                    <div class="navbar-header menubar">
-                        <ul class="nav navbar-nav menu-list">
+            <nav class="navbar navbar-default navbar-static-top">
+                <div class="container-header">
+                    <div class="navbar-header">
+
+                        <!-- Collapsed Hamburger -->
+                        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#app-navbar-collapse">
+                            <span class="sr-only">Toggle Navigation</span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                        </button>
+
+                        <!-- Branding Image -->
+                        <a class="navbar-brand" href="/">
+                            DBC Company
+                        </a>
+                    </div>
+
+                    <div class="collapse navbar-collapse" id="app-navbar-collapse">
+                        <!-- Left Side Of Navbar -->
+                        <ul class="nav nav-navbar navbar-left">
                             <li class="menu-item"><a href="#" th:href="@{/}">Home</a></li>
                             <li class="menu-item"><a href="#" th:href="@{/clientes}">Clientes</a></li>
                             <li class="menu-item"><a sec:authorize="hasAuthority('ADMIN')" th:href="@{/usuarios}">Usuários</a></li>
                         </ul>
-                    </div>
-                    <div style="float:right; margin:10px 8px">
-                        <form th:action="@{/logout}" method="post">
-                            <button type="submit" value="Sair" class="btn btn-logout"/>
-                            <i class="fa fa-sign-out"></i> Sair
-                            </button>
-                        </form>
+
+                        <!-- Right Side Of Navbar -->
+                        <ul class="nav navbar-nav navbar-right">
+                            <li class="dropdown">
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
+                                    <img th:src="@{/images/avatar-placeholder.svg}" alt="" width="30" class="img-circle">
+                                    [[${#httpServletRequest.remoteUser}]] <span class="caret"></span>
+                                </a>
+
+                                <ul class="dropdown-menu" role="menu">
+                                    <li><a href="/logout">Logout</a></li>
+                                </ul>
+                            </li>
+                        </ul>
                     </div>
                 </div>
             </nav>
