--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -2,10 +2,13 @@
 <html xmlns:th="http://www.thymeleaf.org">
     <head lang="en">
         <!--/*/ <th:block th:include="fragments/headerinc :: head"></th:block> /*/-->
-    </head>    
-    <body>
+    </head>
+    <body class="layout-scroll-block">
         <div class="bg-login">
             <div class="container-login">
+                <div class="logo-login">
+                    <img th:src="@{/images/logo.png}" width="160">
+                </div>
                 <div class="panel panel-default">
                     <div class="panel-body box-login">
                         <h3 class="title-login">Login</h3>
