--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -69,6 +69,7 @@ h3, .h3 {
 }
 .panel-body {
     padding: 15px;
+	border-radius: 10px 10px 10px 10px !important;
 }
 .box-login {
     box-shadow: 1px 3px 12px #50575b;    
@@ -80,6 +81,10 @@ input {
 input:focus {
     box-shadow: 1px 1px 5px rgba(57,181,74) !important;
     border: 1px solid #2d993c !important;
+}
+
+select {
+	border-radius: 30px 30px 30px 30px !important;
 }
 
 .title-login {
@@ -321,6 +326,53 @@ fieldset {
 
 .modal-header .close {
     margin-top: -30px;
+}
+
+.inner-addon {
+  position: relative;
+}
+
+.inner-addon .fa {
+    position: absolute;
+    padding: 10px 26px;
+    pointer-events: none;
+}
+
+.left-addon .fa  { 
+    left:  0px;
+}
+
+.right-addon .fa { 
+    right: 0px;
+}
+
+.left-addon input  { 
+    padding-left:  30px; 
+}
+
+.search input {
+    float: right !important;
+    margin: 0px 15px 5px 15px;
+    max-width: 300px !important;
+}
+
+.pagination-left {
+    display: block;
+    width: 50%;
+    float: left;
+    text-align:left;
+    padding-left: 15px;
+    padding-top: 12px;
+    height: 50px;
+}
+.pagination-right {
+    display: block;
+    width: 50%;
+    float: right;
+    text-align:right;
+    padding-right: 15px;
+    margin-top: -15px;
+    height: 50px;
 }
 
 @media only screen and (max-width: 500px) {
