--- a/src/main/resources/templates/clienteLista.html
+++ b/src/main/resources/templates/clienteLista.html
@@ -1,10 +1,10 @@
 <div class="container-fluid">
     <h2>Clientes</h2>
-    <button type="button" class="btn btn-success toggle-btn">
-        <i class="fa fa-plus"></i> Cliente        
+    <button type="button" ng-click="ctrl.divCollapse()" class="btn btn-success">
+        <i ng-class="ctrl.class"></i> Cliente
     </button>
     <br><br>
-    <div class="panel panel-default collapse" id="collapse-form">
+    <div class="panel panel-default collapse">
         <div class="panel-body">
             <div class="alert alert-success" role="alert" ng-if="ctrl.successMessage">{{ctrl.successMessage}}</div>
             <div class="alert alert-danger" role="alert" ng-if="ctrl.errorMessage">{{ctrl.errorMessage}}</div>
@@ -36,33 +36,48 @@
     </div>
     <div class="panel panel-default">
         <div class="panel-body">
-            <div class="table-responsive">
-                <table class="table table-striped">
-                    <thead>
-                        <tr>
-                            <th>ID</th>
-                            <th>Nome</th>
-                            <th>Rend. Mensal</th>
-                            <th>Risco</th>
-                            <th>Endereço</th>
-                            <th class="text-center">Ações</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr ng-repeat="cliente in ctrl.getAllClientes()">
-                            <td>{{cliente.id}}</td>
-                            <td>{{cliente.nome}}</td>
-                            <td>{{cliente.rendMensal}}</td>
-                            <td>{{cliente.risco}}</td>
-                            <td>{{cliente.endereco}}</td>
-                            <td class="col-actions">
-                                <a ng-click="ctrl.clienteEmprestimo(cliente.id)" class="btn btn-default" data-toggle="modal" data-target="#simulacao"><i class="fa fa-dollar"></i> Simular</a>
-                                <a ng-click="ctrl.editCliente(cliente.id)" class="btn btn-primary show-btn"><i class="fa fa-edit"></i> Editar</a>
-                                <a sec:authorize="hasAuthority('ADMIN')" ng-click="ctrl.removeCliente(cliente.id)" class="btn btn-danger"><i class="fa fa-trash"></i> Excluir</a>
-                            </td>
-                        </tr>
-                    </tbody>
-                </table>		
+            <div class="row">
+                <div class="search">
+                    <div class="inner-addon right-addon">
+                        <i class="fa fa-search"></i>
+                        <input type="text" class="form-control" placeholder="Pesquisar" ng-model="pesquisar" />
+                    </div>
+                </div>
+            </div>
+            <table class="table table-striped">
+                <thead>
+                    <tr>
+                        <th>ID</th>
+                        <th>Nome</th>
+                        <th>Rend. Mensal</th>
+                        <th>Risco</th>
+                        <th>Endereço</th>
+                        <th class="text-center">Ações</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr ng-repeat="cliente in filterData = (ctrl.getAllClientes()| filter: pesquisar) | limitTo: 5:5*(page-1)">
+                        <td>{{cliente.id}}</td>
+                        <td>{{cliente.nome}}</td>
+                        <td>{{cliente.rendMensal}}</td>
+                        <td>{{cliente.risco}}</td>
+                        <td>{{cliente.endereco}}</td>
+                        <td class="col-actions">
+                            <a ng-click="ctrl.clienteEmprestimo(cliente.id)" class="btn btn-default" data-toggle="modal" data-target="#simulacao"><i class="fa fa-dollar"></i> Simular</a>
+                            <a ng-click="ctrl.editCliente(cliente.id)" class="btn btn-primary"><i class="fa fa-edit"></i> Editar</a>
+                            <a sec:authorize="hasAuthority('ADMIN')" ng-click="ctrl.removeCliente(cliente.id)" class="btn btn-danger"><i class="fa fa-trash"></i> Excluir</a>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+            <div class="row">
+                <div class="pagination-left">
+                    Total de Registros: {{filterData.length}}
+                </div>
+                <div class="pagination-right">
+                    <uib-pagination class="pagination-sm pagination" total-items="filterData.length" ng-model="page"
+                                    previous-text="&lsaquo;" next-text="&rsaquo;" items-per-page=5></uib-pagination>
+                </div>
             </div>
         </div>
     </div>
@@ -117,4 +132,3 @@
         </div>
     </div>
 </div>
-<script type="text/javascript" th:src="@{/js/collapse.js}"></script>
