--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -18,7 +18,7 @@
                         <form th:action="@{/login}" method="post">
                             <div class="form-group">
                                 <i class="fa fa-user"></i>
-                                <input type="text" name="username" class="form-control input-login" placeholder="Usuário"/>
+                                <input type="text" name="username" class="form-control input-login" autofocus="autofocus" placeholder="Usuário"/>
                             </div>
                             <div class="form-group">
                                 <i class="fa fa-lock"></i>
