--- a/src/main/resources/templates/usuarios.html
+++ b/src/main/resources/templates/usuarios.html
@@ -8,6 +8,7 @@
         <div ui-view></div>
         <script type="text/javascript" th:src="@{/js/lib/angular.min.js}"></script>
         <script type="text/javascript" th:src="@{/js/lib/angular-ui-router.min.js}"></script>
+        <script type="text/javascript" th:src="@{/js/lib/angular-ui-bootstrap-tpls.js}"></script>
         <script type="text/javascript" th:src="@{/js/lib/localforage.min.js}"></script>
         <script type="text/javascript" th:src="@{/js/lib/ngStorage.min.js}"></script>
         <script type="text/javascript" th:src="@{/js/app/UsuarioApp.js}"></script>
