--- a/src/main/resources/templates/fragments/headerinc.html
+++ b/src/main/resources/templates/fragments/headerinc.html
@@ -6,6 +6,8 @@
         <link type="text/css" rel="stylesheet" th:href="@{/css/bootstrap.min.css}" />
         <link type="text/css" rel="stylesheet" th:href="@{/css/font-awesome.min.css}" />
         <link type="text/css" rel="stylesheet" th:href="@{/css/style.css}" />
+        <script type="text/javascript" th:src="@{/js/jquery.min.js}"></script>
+        <script type="text/javascript" th:src="@{/js/bootstrap.min.js}"></script>
         <title>DBC Company</title>
     </head>
     <body>
