--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -40,7 +40,8 @@
                                 </a>
 
                                 <ul class="dropdown-menu" role="menu">
-                                    <li><a href="/logout">Logout</a></li>
+                                    <li><a href="#" th:href="@{/perfil}">Perfil</a></li>
+                                    <li><a href="#" th:href="@{/logout}">Logout</a></li>
                                 </ul>
                             </li>
                         </ul>
