--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -12,9 +12,7 @@
                 <div class="panel panel-default">
                     <div class="panel-body box-login">
                         <h3 class="title-login">Login</h3>
-                        <div class="alert alert-success" th:if="${message}">
-                            Usuário cadastrado com sucesso!
-                        </div>
+                        <div class="alert alert-success" th:if="${message}">[[${message}]]</div>
                         <form th:action="@{/login}" method="post">
                             <div class="form-group">
                                 <i class="fa fa-user"></i>
