--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -41,7 +41,7 @@
 
                                 <ul class="dropdown-menu" role="menu">
                                     <li><a href="#" th:href="@{/perfil}">Perfil</a></li>
-                                    <li><a href="#" th:href="@{/logout}">Logout</a></li>
+                                    <li><a href="#" th:href="@{/logout}">Sair</a></li>
                                 </ul>
                             </li>
                         </ul>
