Ajuste no botão e combo do formulário

--- a/src/main/resources/templates/clienteLista.html
+++ b/src/main/resources/templates/clienteLista.html
@@ -26,8 +26,8 @@
                         <button type="submit" class="btn btn-success" ng-disabled="clienteForm.$invalid || clienteForm.$pristine">
                             <i class="fa fa-hdd-o"></i> {{!ctrl.cliente.id ? 'Adicionar' : 'Atualizar'}}
                         </button>
-                        <button type="button" ng-click="ctrl.reset()" class="btn btn-default" ng-disabled="clienteForm.$pristine">
-                            <i class="fa fa-eraser"></i> Reiniciar
+                        <button type="button" ng-click="ctrl.reset()" class="btn btn-default">
+                            <i class="fa fa-eraser"></i> Limpar
                         </button>
                     </div>
                 </div>
