--- a/src/main/resources/templates/fragments/headerinc.html
+++ b/src/main/resources/templates/fragments/headerinc.html
@@ -2,12 +2,16 @@
 <html xmlns:sec="http://www.thymeleaf.org/extras/spring-security" 
     xmlns:th="http://www.thymeleaf.org">
     <head>
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />	
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		
         <link type="text/css" rel="stylesheet" th:href="@{/css/bootstrap.min.css}" />
         <link type="text/css" rel="stylesheet" th:href="@{/css/font-awesome.min.css}" />
         <link type="text/css" rel="stylesheet" th:href="@{/css/style.css}" />
+		
         <script type="text/javascript" th:src="@{/js/jquery.min.js}"></script>
         <script type="text/javascript" th:src="@{/js/bootstrap.min.js}"></script>
+		
         <title>DBC Company</title>
     </head>
     <body>
