--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -3,8 +3,8 @@
     <head lang="en">
         <!--/*/ <th:block th:include="fragments/headerinc :: head"></th:block> /*/-->
     </head>
-    <body class="layout-scroll-block">
-        <div class="bg-login">
+    <body class="layout-scroll-block bg-login">
+        <div class="bg-radial">
             <div class="container-login">
                 <div class="logo-login">
                     <img th:src="@{/images/logo.png}" width="160">
