--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -9,7 +9,7 @@
                 <div class="logo-login">
                     <img th:src="@{/images/logo.png}" width="160">
                 </div>
-                <div class="panel panel-default">
+                <div class="panel">
                     <div class="panel-body box-login">
                         <h3 class="title-login">Login</h3>
                         <div class="alert alert-success" th:if="${message}">[[${message}]]</div>
