Realizado ajuste no css

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -65,6 +65,7 @@ h3, .h3 {
     border-radius: 4px;
     -webkit-box-shadow: 0 1px 1px rgba(0,0,0,0.05);
     box-shadow: 0 1px 1px rgba(0,0,0,0.05);
+	border-radius: 10px 10px 10px 10px !important;
 }
 .panel-default {
     border-color: #ddd;
